fix render issue

--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
                 </div>
             </header>
             <div class="todoList">
-                <div class="todoTask" id="0">
+                <!-- <div class="todoTask" id="0">
                     <i class="bi bi-circle"></i>
                     <i class="bi bi-check-circle-fill"></i>
                     <p class="taskText">Get Eggs</p>
                     <i class="bi bi-pencil-square"></i>
                     <i class="bi bi-x-circle"></i>
-                </div>
+                </div> -->
             </div>
         </section>
-        <script src="script.js"></script>
+        <script src="./script.js"></script>
     </body>
 
 </html>
