--- a/index.html
+++ b/index.html
@@ -1,39 +1,34 @@
 <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>To Do List M1 Project</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css" />
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <header>
+        <div class="header">
+          <h2>Let's Check Everything</h2>
+        </div>
+        <div class="new-todo">
+          <form id="todoform">
+            <input type="text" name="newtodo" id="newtodo" placeholder="I will do ..." />
+            <button type="submit">
+              <i class="bi bi-plus-circle-fill"></i>
+            </button>
+          </form>
+        </div>
+      </header>
+      <div id="todos-list">
+        <!-- to do elements will be placed here -->
+      </div>
+      <div class="notification"></div>
+    </div>
 
-<html>
-    <head>
-        <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-        <title>To Do List</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    </head>
-    <body>
-        <section class="container">
-            <header>
-                <div class="header">
-                    <h3>Let's CheckBox Everything</h3>
-                </div>
-                <div class="addNewEvent">
-                    <form id="inputForm">
-                        <input type="text" name="newTask" id="newTask" placeholder="Type Your New Task Here ...">
-                        <button type="submit">
-                            <i class="bi bi-plus-circle"></i>
-                        </button>
-                    </form>
-                </div>
-            </header>
-            <div class="todoList">
-                <!-- <div class="todoTask" id="0">
-                    <i class="bi bi-circle"></i>
-                    <i class="bi bi-check-circle-fill"></i>
-                    <p class="taskText">Get Eggs</p>
-                    <i class="bi bi-pencil-square"></i>
-                    <i class="bi bi-x-circle"></i>
-                </div> -->
-            </div>
-        </section>
-        <script src="./script.js"></script>
-    </body>
-
+    <script src="./index.js"></script>
+  </body>
 </html>
