--- a/index.html
+++ b/index.html
@@ -2,33 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To Do List M1 Project</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css" />
-    <link rel="stylesheet" href="./style.css" />
-  </head>
+    <link rel="stylesheet" href="./styles.css" />
+    </head>
   <body>
     <div class="container">
-      <header>
-        <div class="header">
+        <div id="welcome-text">
           <h2>Let's Check Everything</h2>
         </div>
         <div class="new-todo">
-          <form id="todoform">
-            <input type="text" name="newtodo" id="newtodo" placeholder="I will do ..." />
-            <button type="submit">
-              <i class="bi bi-plus-circle-fill"></i>
-            </button>
-          </form>
+            <form id="todo-form">
+                <input type="text" name="new-todo-input" id="new-todo-input" placeholder="I will do ..." />
+                <button type="submit" id="addButton">
+                <i class="bi bi-plus-circle-fill"></i>
+                </button>
+            </form>
         </div>
-      </header>
-      <div id="todos-list">
-        <!-- to do elements will be placed here -->
-      </div>
-      <div class="notification"></div>
+        <div id="todo-list">
+            <!-- Todo items will be added dynamically here -->
+        </div>
     </div>
-
-    <script src="./index.js"></script>
-  </body>
+    <script src="index.js"></script>
+    </body>
 </html>
