--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
         <div id="welcome-text">
-           <h2>Let's Check Everything</h2>
+           <h3>Let's Check Everything</h3>
         </div>
         <div class="new-todo">
             <form id="todo-form">
@@ -24,7 +24,7 @@
             <!-- Todo items will be added dynamically here -->
         </div>
     </div>
-    <div>click to change background</div>
+    <button id="changeBgButton">Change Background</button>
     <script src="index.js"></script>
     </body>
 </html>
